--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "name": "RTSP Simple Server Add-on",
-  "version": "v0.17.11.6",
+  "version": "v0.17.11.7",
   "slug": "rtsp_simple_server",
   "description": "Create RTSP server to broadcast streams, thanks to @aler9 - https://github.com/aler9/rtsp-simple-server",
   "arch": [
@@ -12,8 +12,7 @@
   "boot": "auto",
   "legacy": true,
   "map": [
-    "share:rw",
-    "config:rw"
+    "config:ro"
   ],
   "ports": {
     "1935/tcp": 1935,
