--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "name": "RTSP Simple Server Add-on",
-  "version": "v0.17.11.9",
+  "version": "v0.17.11.10",
   "slug": "rtsp_simple_server",
   "description": "Create RTSP server to broadcast streams, thanks to @aler9 - https://github.com/aler9/rtsp-simple-server",
   "arch": [
@@ -25,19 +25,5 @@
     "9997/tcp": "HTTP api through http://127.0.0.1:9997/v1/paths/list."
   }
   ,
-  "startup": "application",
-  "options": {
-	  "RTSP_API": "yes",
-	  "RTSP_APIADDRESS": ":9997",
-	  "RTSP_PROTOCOLS": "tcp",
-	  "RTSP_PATHS_ALL_RUNONDEMAND": "echo 'incoming'",
-	  "RTSP_PATHS_ALL_RUNONDEMANDRESTART": "yes"
-  },
-  "schema": {
-	  "RTSP_API": "list(yes)",
-	  "RTSP_APIADDRESS": "list(:9997)",
-	  "RTSP_PROTOCOLS": "list(tcp)",
-	  "RTSP_PATHS_ALL_RUNONDEMAND": "list(echo 'incoming')",
-	  "RTSP_PATHS_ALL_RUNONDEMANDRESTART": "list(yes)"
-  }
+  "startup": "application"
 }
